Fixed scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ aside {
 main {
     height: 100%;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     scroll-behavior: smooth;
 }
 
